--- a/chart.html
+++ b/chart.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="node_modules/chart.js/dist/chart.umd.js"></script>
     <title>DevOps Chart</title>
 </head>
